test/e2e/testdata/deprecated-extensions/network-policy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: allow-default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
